# quagga

./: .gitignore  EasyComb.hs  Guic.hs  LICENSE  Makefile  Niemczyk.cabal  Parser.lhs  Util.hs  Vm.hs  csv2sql.hs  extjs-gen.hs  test.hs  test.lc
Csv/: Sql.lhs
Guic/: Base.hs  CommonTarget.hs  Compiler.hs  Extjs.hs  Forms.hs  Widgets.hs
Guic/Extjs/: Abscodegen.hs  Compile.hs  Doccodegen.tex  Doccodegen.txt  Lexcodegen.x  Parcodegen.y  Printcodegen.hs  Skelcodegen.hs  Testcodegen.hs  codegen.cf
Quagga/: lc.cf  lcc.hs  lch.hs  qlcc.hs  qlcgraph.hs  qlch.hs  qlcr.hs
Quagga/LC/: Abslc.hs  ByteCode.hs  Conditionals.hs  Curry.hs  Doclc.dvi  Doclc.ps  Doclc.tex  Doclc.txt  ErrM.hs  Genhaskell.hs  Graph.hs  Infix.hs  Let.hs  Lexlc.hs  Lexlc.x  Parlc.hs  Parlc.y  Printlc.hs  Reduce.hs  Runtime.hs  SK.hs  Simplify.hs  Skellc.hs  Testlc  Testlc.hs  Tuple.hs  WalkExp.hs
SPJ/: lc.cf  lc.hs  lcc.hs  lch.hs
SPJ/LC/: Abslc.hs  ByteCode.hs  Conditionals.hs  Curry.hs  Doclc.dvi  Doclc.ps  Doclc.tex  Doclc.txt  ErrM.hs  Genhaskell.hs  Infix.hs  Let.hs  Lexlc.hs  Lexlc.x  Parlc.hs  Parlc.y  Printlc.hs  Reduce.hs  Runtime.hs  SK.hs  Simplify.hs  Skellc.hs  Testlc  Testlc.hs  Tuple.hs  WalkExp.hs
SPJ/LC/lib/: stdlib.lc
lib/: stdlib.lc
target_c/: Makefile  gc.c  gc.h  gctest.c  test.c
target_c/parser/: Makefile  quagga.cf  test.quagga
