Cabal-Version:  >= 1.2
Name:			Niemczyk
Version:		0.0.1
Description:	Code generation toolkit
Author:			Brandon Niemczyk
Build-Type:		Simple
License-File:   LICENSE

Library
    Build-Depends:		base
    Exposed-modules:	Guic Guic.Widgets Guic.Extjs Csv.Sql Guic.Base Guic.Forms Guic.Compiler Parser Guic.CommonTarget 
    other-modules:      Util 
    ghc-options:		-fglasgow-exts -package haskell98 -package regex-posix-0.93.1 -package pretty -cpp -package binary

Executable csv2sql
    Main-Is: csv2sql.hs
    Build-Depends: base
    ghc-options:		-fglasgow-exts -package haskell98 -package regex-posix-0.93.1 -cpp

Executable extjs-gen
    Main-Is: extjs-gen.hs
    Build-Depends: base
    ghc-options:		-fglasgow-exts -package haskell98 -package regex-posix-0.93.1 -package pretty -cpp

Executable qlch
    Main-Is: Quagga/qlch.hs
    Build-Depends: base
    ghc-options:		-fglasgow-exts -package haskell98 -package regex-posix-0.93.1 -package pretty -cpp -package array -package binary

Executable qlcc
    Main-Is: Quagga/qlcc.hs
    Build-Depends: base
    ghc-options:		-fglasgow-exts -package haskell98 -package regex-posix-0.93.1 -package pretty -cpp -package array -package binary -package bytestring
