Cabal-Version:  >= 1.2
Name:			Niemczyk
Version:		0.0.1
Description:	Code generation toolkit
Author:			Brandon Niemczyk
Build-Type:		Simple
License-File:   LICENSE

Executable csv2sql
    Main-Is: csv2sql.hs
    Build-Depends: base
    ghc-options:		-fglasgow-exts -package haskell98 -package regex-posix-0.93.1 -cpp

Executable qlch
    Main-Is: Quagga/qlch.hs
    Build-Depends: base
    ghc-options:		-fglasgow-exts -package haskell98 -package regex-posix-0.93.1 -package pretty -cpp -package array -package binary

Executable qlcc
    Main-Is: Quagga/qlcc.hs
    Build-Depends: base
    ghc-options:		-fglasgow-exts -package haskell98 -package regex-posix-0.93.1 -package pretty -cpp -package array -package binary -package bytestring -package mtl

Executable qlcr
    Main-Is: Quagga/qlcr.hs
    Build-Depends: base
    ghc-options:		-fglasgow-exts -package haskell98 -package regex-posix-0.93.1 -package pretty -cpp -package array -package binary -package bytestring -package mtl
